--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ numpy
 uvicorn
 pyjwt
 fastapi
+python-multipart
 
 # Database
 sqlmodel
 pydantic-settings
-pymysql
+pydantic[email]
+psycopg2
 
 # OAuth
 pyjwt
 pwdlib
+pwdlib[argon2]
