--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 APP_NAME=
 ENV=
 
+# GEMINI API
+GEMINI_API_KEY=
+GEMINI_MODEL_NAME=
+# GEMINI_API_URL=
+
 # DATABASE (PostgreSQL)
 DB_DRIVER=
 DB_HOST=
